force-app/main/default/objects/cadmus_core__Pack__c/cadmus_core__Pack__c.object-meta.xml
<CustomObject>
    <label>PDF Butler Pack</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PDF Butler Packs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>