force-app/main/default/objects/cadmus_core__Pack__c/fields/cadmus_core__Active__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>