force-app/main/default/objects/cadmus_core__Pack__c/fields/cadmus_core__Customer_Pack_Id__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Customer_Pack_Id__c</fullName>
    <formula>IF( ISBLANK(cadmus_core__Migrated_Customer_Pack_Id__c )
,IF(
ISBLANK(cadmus_core__Migrated_Customer_Pack_Id_2__c )
, $Organization.Id + &apos;_&apos; + Id
, cadmus_core__Migrated_Customer_Pack_Id_2__c 
)
, cadmus_core__Migrated_Customer_Pack_Id__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Pack Id</label>
    <type>Text</type>
</CustomField>