force-app/main/default/objects/cadmus_core__Pack__c/fields/cadmus_core__Leading_Doc_Config__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Leading_Doc_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Leading Doc Config</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cadmus_core__Doc_Config__c.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>TEMPLATE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cadmus_core__Doc_Config__c</referenceTo>
    <relationshipLabel>PDF Butler Packs</relationshipLabel>
    <relationshipName>PDF_Butler_Packs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>