force-app/main/default/objects/cadmus_core__Pack__c/fields/cadmus_core__Migrated_Customer_Pack_Id_2__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Migrated_Customer_Pack_Id_2__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>If you migrate a pack from another Org or a Sandbox, use this field to copy the Pack Id from that other Org/Sandbox</description>
    <externalId>true</externalId>
    <label>Migrated Customer Pack Id 2</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>