force-app/main/default/objects/cadmus_core__Pack__c/fields/cadmus_core__Migrated_Customer_Pack_Id__c.field-meta.xml
<CustomField>
    <fullName>cadmus_core__Migrated_Customer_Pack_Id__c</fullName>
    <externalId>true</externalId>
    <label>Migrated Customer Pack Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>