force-app/main/default/objects/cadmus_core__Pack__c/listViews/cadmus_core__All.listView-meta.xml
<ListView>
    <fullName>cadmus_core__All</fullName>
    <columns>NAME</columns>
    <columns>cadmus_core__Leading_Doc_Config__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>